# iced_video_player

./: Cargo.toml
examples/: minimal.rs
src/: lib.rs  pipeline.rs  shader.wgsl  video.rs  video_player.rs
